# zk-proof-of-funds

./: .gitignore  ATTESTATION_VALIDATION.md  ORCHARD_BACKEND_REVIEW.md  ORCHARD_WASM_PROVER_PROMPT.md  README.md  ZCASH_ORCHARD_ATTESTATION_GUIDE.md  validate_attestation.py
zkpf/: .dockerignore  .gitignore  .vercelignore  Cargo.toml  Dockerfile  README.md  architecture.md  crate-review.md  fly.toml  issues.md  microfrontends.json  rust-toolchain.toml  vercel.json
zkpf/.cargo/: config.toml
zkpf/.tmp/: rustix_test_can_compile
zkpf/api/: lightwalletd.js  package.json
zkpf/api/chat/: channel.js
zkpf/api/p2p/: offers.js
zkpf/api/zkpf/: attest.js  epoch.js  helpers.js  mock-data.js  params.js  policies.js  prove-bundle.js  verify-bundle.js  verify.js
zkpf/config/: multi-rail-manifest.json  multi-rail-manifest.sample.json  policies.json
zkpf/contracts/: AttestationRegistry.sol  BalanceSnapshotPublisher.sol  WalletCommitmentRegistry.sol
zkpf/contracts/axelar/: AttestationBridge.sol  IAxelarGateway.sol  PoFCredentialVerifier.sol  PoFReceiver.sol  PrivateCreditLine.sol
zkpf/contracts/mina/: .gitignore  package-lock.json  package.json  tsconfig.json
zkpf/contracts/p2p/: P2PEscrow.sol
zkpf/contracts/ramp/: RampEscrow.sol  zkUSD.sol
zkpf/contracts/starknet/: AttestationRegistry.cairo  Scarb.toml  ZkpfVerifier.cairo  lib.cairo
zkpf/data/nullifiers.db/: db  snap.00000000000000D6
zkpf/data/personhood.db/: db  snap.00000000000000F7
zkpf/docs/: axelar-gmp.md  ci-artifacts.md  mina-bridge.md  mina-rail.md  mina-roadmap.md  omni-bridge-frontend-plan.md  onchain-proof-of-funds.md  pcd-wallet-state.md  personhood-wallet-binding.md  starknet-implementation-review.md  starknet-rail.md  tachyon-architecture.md  try-it-now-flow.md  uri-encapsulated-payments.md  usdc-onramp-plan.md  zkpf-ramp-protocol.md
zkpf/experiments/zkpf-pczt-transparent/: Cargo.toml  README.md
zkpf/experiments/zkpf-rails-omni/: Cargo.toml
zkpf/experiments/zkpf-tachyon-wallet/: Cargo.toml
zkpf/experiments/zkpf-x402/: Cargo.toml  README.md
zkpf/ragu/src/: circuit.rs  error.rs  lib.rs  maybe.rs  sink.rs
zkpf/ragu/tests/: integration.rs
zkpf/web/: .env  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
zkpf/web/public/: attestation.sample.json  coi-serviceworker.js  manifest.json  sample-bundle-fiat.json  sample-bundle-onchain.json  sample-bundle-orchard.json  sample-bundle.json  sw.js
zkpf/web/src/: App.css  App.tsx  index.css  main.tsx
zkpf/webwallet/: Cargo.toml  bindgenwallet.rs  build-wasm.sh  package.json  pkg  pkg-keys  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  rust-toolchain.toml  wallet.rs
zkpf/webwallet/.cargo/: config.toml
zkpf/webwallet/snap/: snap.manifest.json
zkpf/webwallet/web-wallet/: package.json  server.js
zkpf/xtask/: Cargo.toml
zkpf/xtask/src/: main.rs
zkpf/zkpf-axelar-gmp/: Cargo.toml
zkpf/zkpf-axelar-gmp/src/: bridge.rs  chains.rs  encoding.rs  lib.rs  zcash.rs
zkpf/zkpf-axelar-gmp/zkpf-rails-axelar/: Cargo.toml
zkpf/zkpf-backend/: Cargo.toml
zkpf/zkpf-backend/config/: policies.json
zkpf/zkpf-backend/src/: lib.rs  main.rs  personhood.rs
zkpf/zkpf-backend/tests/: integration.rs
zkpf/zkpf-chat/: Makefile.toml
zkpf/zkpf-chat/browser-wasm/: Cargo.toml
zkpf/zkpf-chat/cli/: Cargo.toml
zkpf/zkpf-chat/frontend/: package.json
zkpf/zkpf-chat/shared/: Cargo.toml
zkpf/zkpf-circuit/: Cargo.toml
zkpf/zkpf-circuit/src/: custodians.rs  lib.rs  sample_input.json
zkpf/zkpf-circuit/tests/: basic.rs
zkpf/zkpf-common/: Cargo.toml
zkpf/zkpf-common/src/: lib.rs
zkpf/zkpf-custodian-registry/: Cargo.toml
zkpf/zkpf-mina/: Cargo.toml
zkpf/zkpf-mina-kimchi-wrapper/: Cargo.toml
zkpf/zkpf-mina-kimchi-wrapper/src/: accumulator.rs  circuit.rs  ec.rs  error.rs  ff.rs  gates.rs  kimchi_core.rs  lib.rs  linearization.rs  proof_parser.rs  types.rs  verifier.rs
zkpf/zkpf-mina-kimchi-wrapper/tests/: integration.rs
zkpf/zkpf-mina-rail/src/: aggregator.rs  bridge.rs  circuit.rs  ivc.rs  main.rs  server.rs  tachystamp.rs
zkpf/zkpf-mina-relayer/: Cargo.toml
zkpf/zkpf-mina-relayer/src/: config.rs  main.rs  mina_listener.rs  queue.rs
zkpf/zkpf-mina/src/: circuit.rs  error.rs  graphql.rs  lib.rs  mina_rail.rs  starknet_integration.rs  state.rs  types.rs  zkapp.rs
zkpf/zkpf-mina/tests/: integration.rs
zkpf/zkpf-mina/zkpf-mina-kimchi-wrapper/: Cargo.toml  README.md
zkpf/zkpf-mina/zkpf-mina-rail/: Cargo.toml  run.sh
zkpf/zkpf-mina/zkpf-mina-relayer/: Cargo.toml
zkpf/zkpf-mina/zkpf-rails-mina/: Cargo.toml
zkpf/zkpf-near-tee/: Cargo.toml
zkpf/zkpf-near-tee/src/: agent.rs  attestation.rs  chain_abstraction.rs  crypto.rs  error.rs  inference.rs  keeper_ws.rs  lib.rs  lightwalletd_client.rs  mina_rail_client.rs  pcd_keeper.rs  rpc.rs  shade_agent.rs  types.rs
zkpf/zkpf-omni-bridge/: Cargo.toml
zkpf/zkpf-omni-bridge/src/: chains.rs  config.rs  proof.rs  tokens.rs  transfer.rs
zkpf/zkpf-orchard-inner/: Cargo.toml
zkpf/zkpf-orchard-inner/src/: artifacts.rs  error.rs  (+3 more)
zkpf/zkpf-orchard-pof-circuit/: Cargo.toml  FIXED_BASE_TABLES_GUIDE.md
zkpf/zkpf-orchard-wasm-prover/: Cargo.toml
zkpf/zkpf-prover/: Cargo.toml
zkpf/zkpf-rails-axelar/: Cargo.toml
zkpf/zkpf-rails-mina/: Cargo.toml
zkpf/zkpf-rails-omni/: Cargo.toml
zkpf/zkpf-rails-starknet/: Cargo.toml
zkpf/zkpf-rails-zcash-orchard/: Cargo.toml
zkpf/zkpf-snap/: README.md  build_local.sh  package-lock.json  package.json  report-06432525112025.html  snap.config.ts  snap.manifest.json  tsconfig.json
zkpf/zkpf-starknet-l2/: Cargo.toml
zkpf/zkpf-tachyon-wallet/: Cargo.toml
zkpf/zkpf-test-fixtures/: .gitignore  Cargo.toml
zkpf/zkpf-tools/: Cargo.toml
zkpf/zkpf-uri-payment/: Cargo.toml
zkpf/zkpf-verifier/: Cargo.toml
zkpf/zkpf-wallet-state/: Cargo.toml
zkpf/zkpf-wasm/: Cargo.toml
zkpf/zkpf-x402/: Cargo.toml  INTEGRATION.md
zkpf/zkpf-zcash-orchard-circuit/: Cargo.toml
zkpf/zkpf-zcash-orchard-wallet/: Cargo.toml  build.rs
zkpf/zpkf-orderly/: PERP_FIX_SUMMARY.md  PERP_SDK_INTEGRATION.md  package-lock.json  package.json
(+654 files in other folders)
