[workspace]
resolver = "2"
members = [
    "zkpf-circuit",
    "zkpf-prover",
    "zkpf-verifier",
    "zkpf-wasm",
    "zkpf-backend",
    "zkpf-common",
    "zkpf-tools",
    "zkpf-test-fixtures",
    "xtask",
    "zkpf-zcash-orchard-wallet",
    "zkpf-zcash-orchard-circuit",
    "zkpf-rails-zcash-orchard",
    "zkpf-orchard-inner",
    "zkpf-orchard-pof-circuit",
    "zkpf-custodian-registry",
    # Starknet L2 rail
    "zkpf-starknet-l2",
    "zkpf-rails-starknet",
    # Axelar GMP rail (interchain PoF receipts)
    "zkpf-axelar-gmp",
    "zkpf-rails-axelar",
    # Mina recursive proof hub rail
    "zkpf-mina",
    "zkpf-rails-mina",
    # Mina Proof of State Kimchi wrapper (BN254 circuit for Mina state verification)
    "zkpf-mina-kimchi-wrapper",
    # Mina state relayer
    "zkpf-mina-relayer",
]

[patch.crates-io]
base64ct = { git = "https://github.com/RustCrypto/formats.git", rev = "0ebdd64122a6dc5f0461140a91c7f2cdcec8e015", package = "base64ct" }
halo2-base = { path = "vendor/halo2-base" }
