[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
halo2curves-axiom = { version = "0.7", package = "halo2curves-axiom", features = ["bn256-table"] }
hex = "0.4"
k256 = { version = "0.13", features = ["ecdsa"] }
poseidon-primitives = "0.2"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zkpf-circuit = { path = "../zkpf-circuit" }
zkpf-common = { path = "../zkpf-common" }

