[package]
name = "zkpf-backend"
version = "0.1.0"
edition = "2021"

[features]
default = ["mina-rail"]
mina-rail = ["dep:zkpf-mina-rail"]

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
once_cell = "1"
sled = "0.34"
sha3 = "0.10"
blake3 = "1"
uuid = { version = "1", features = ["serde", "v4"] }
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
zkpf-verifier = { path = "../zkpf-verifier" }
zkpf-common = { path = "../zkpf-common" }
zkpf-prover = { path = "../zkpf-prover" }
zkpf-circuit = { path = "../zkpf-circuit" }
halo2_proofs_axiom = { version = "0.5.1", package = "halo2-axiom", default-features = false }
halo2curves-axiom = { version = "0.7", package = "halo2curves-axiom", features = ["bn256-table"] }
zkpf-zcash-orchard-circuit = { path = "../zkpf-zcash-orchard-circuit" }
zkpf-wallet-state = { path = "../zkpf-wallet-state" }
zkpf-mina-rail = { path = "../zkpf-mina-rail", default-features = false, features = ["server"], optional = true }
rand = "0.8"

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
zkpf-test-fixtures = { path = "../zkpf-test-fixtures" }