[package]
name = "zkpf-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors"] }
once_cell = "1"
sled = "0.34"
sha3 = "0.10"
sha2 = "0.10"
blake3 = "1"
uuid = { version = "1", features = ["serde", "v4"] }
hex = "0.4"
ed25519-dalek = { version = "2", features = ["rand_core"] }
p256 = { version = "0.13", features = ["ecdsa"] }
# k256 for secp256k1 ECDSA signature verification (attestation validation)
k256 = { version = "0.13", features = ["ecdsa"] }
base64 = "0.22"
zkpf-verifier = { path = "../zkpf-verifier" }
zkpf-common = { path = "../zkpf-common" }
zkpf-prover = { path = "../zkpf-prover" }
zkpf-circuit = { path = "../zkpf-circuit" }
zkpf-zcash-orchard-circuit = { path = "../zkpf-zcash-orchard-circuit" }

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
zkpf-test-fixtures = { path = "../zkpf-test-fixtures" }