[package]
name = "zkpf-common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
halo2_proofs_axiom = { version = "0.5.1", package = "halo2-axiom", default-features = false, features = ["circuit-params"] }
halo2curves-axiom = { version = "0.7", package = "halo2curves-axiom", default-features = false, features = ["bn256-table"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zkpf-circuit = { path = "../zkpf-circuit" }
blake3 = "1.5"
poseidon-primitives = "0.2"
once_cell = "1.19"

