[package]
name = "zkpf-mina"
version = "0.1.0"
edition = "2021"
description = "Mina recursive proof hub rail for zkpf: cross-chain PoF attestations via Mina zkApps"

[dependencies]
# Core zkpf crates
zkpf-common = { path = "../zkpf-common" }
zkpf-circuit = { path = "../zkpf-circuit" }
zkpf-mina-kimchi-wrapper = { path = "../zkpf-mina-kimchi-wrapper" }

# Halo2 proving system (bn256 compatible) - matches workspace versions
halo2_proofs_axiom = { version = "0.5.1", package = "halo2-axiom", default-features = false }
halo2curves_axiom = { version = "0.7", package = "halo2curves-axiom", features = ["bn256-table"] }
halo2-base = { path = "../vendor/halo2-base" }

# Cryptography
blake3 = "1.5"
poseidon-primitives = "0.2"

# Async runtime (optional)
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base64 = "0.21"
num-bigint = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
once_cell = "1.19"
rand = "0.8"

# HTTP client for GraphQL (optional)
reqwest = { version = "0.11", features = ["json"], optional = true }
url = { version = "2.5", optional = true }

[features]
default = []
# Enable Mina GraphQL API client
mina-graphql = ["reqwest", "url", "tokio"]
# Enable WASM target support
wasm = []

[dev-dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }

