[package]
name = "zkpf-near-tee"
version = "0.1.0"
edition = "2021"
description = "NEAR TEE-backed private AI agent for zkpf wallet intelligence"
license = "MIT OR Apache-2.0"

[dependencies]
# Core zkpf crates
zkpf-common = { path = "../zkpf-common" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
blake3 = "1.5"
sha2 = "0.10"
ed25519-dalek = "2.0"
x25519-dalek = "2.0"
aes-gcm = "0.10"
rand = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# HTTP client for NEAR RPC
reqwest = { version = "0.11", features = ["json"], optional = true }

# NEAR SDK (optional, for contract integration)
near-sdk = { version = "5.0", optional = true }
near-crypto = { version = "0.20", optional = true }

[features]
default = ["http"]
http = ["reqwest"]
near-contract = ["near-sdk", "near-crypto"]

[dev-dependencies]
tokio-test = "0.4"

