[package]
name = "zkpf-near-tee"
version = "0.1.0"
edition = "2021"
description = "NEAR TEE-backed private AI agent for zkpf wallet intelligence"
license = "MIT OR Apache-2.0"

[dependencies]
# Core zkpf crates
zkpf-common = { path = "../zkpf-common" }
zkpf-wallet-state = { path = "../zkpf-wallet-state" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
blake3 = "1.5"
sha2 = "0.10"
ed25519-dalek = "2.0"
x25519-dalek = "2.0"
aes-gcm = "0.10"
rand = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# HTTP client for Mina Rail and NEAR RPC
reqwest = { version = "0.11", features = ["json"] }

# gRPC client for lightwalletd
tonic = { version = "0.11", optional = true }
prost = { version = "0.12", optional = true }

# WebSocket for keeper events
tokio-tungstenite = { version = "0.21", optional = true }

# Base64 encoding for proofs
base64 = "0.21"

# Hex encoding
hex = "0.4"

# Halo2 proving stack (Axiom fork, used via zkpf-wallet-state)
halo2_proofs_axiom = { package = "halo2-axiom", path = "../vendor/halo2-axiom", default-features = false, features = ["batch", "circuit-params", "multicore"] }
halo2curves_axiom = { package = "halo2curves-axiom", version = "0.7", default-features = false, features = ["bits", "bn256-table", "derive_serde"] }

# NEAR SDK (optional, for contract integration)
near-sdk = { version = "5.0", optional = true }
near-crypto = { version = "0.20", optional = true }

[features]
default = ["http-clients"]
http-clients = []
grpc-lightwalletd = ["tonic", "prost"]
websocket = ["tokio-tungstenite"]
near-contract = ["near-sdk", "near-crypto"]
full = ["grpc-lightwalletd", "websocket"]

[build-dependencies]
tonic-build = { version = "0.11", optional = true }

[dev-dependencies]
tokio-test = "0.4"

