[package]
name = "zkpf-orchard-pof-circuit"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "1"
blake3 = "1"
blake2b_simd = "1"
arrayvec = "0.7"
rand = "0.8"
rand_core = "0.6"
tracing = "0.1"
once_cell = "1"

# Orchard protocol dependencies (zcash versions)
orchard = { version = "0.11", default-features = false, features = ["circuit", "std"] }
halo2_proofs = "0.3"
halo2_gadgets = "0.3"
pasta_curves = { version = "0.5", features = ["repr-c"] }
ff = "0.13"
group = "0.13"

zkpf-orchard-inner = { path = "../zkpf-orchard-inner" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
orchard = { version = "0.11", default-features = false, features = ["circuit", "multicore", "std"] }
halo2_proofs = { version = "0.3", features = ["multicore"] }

[dev-dependencies]
proptest = "1"


