[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
once_cell = "1.19"
zkpf-zcash-orchard-circuit = { path = "../zkpf-zcash-orchard-circuit" }
zkpf-zcash-orchard-wallet = { path = "../zkpf-zcash-orchard-wallet" }

[dependencies.web-sys]
version = "0.3"
features = ["console"]