[package]
name = "zkpf-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
zkpf-circuit = { path = "../zkpf-circuit" }
halo2curves-axiom = { version = "0.7", package = "halo2curves-axiom", features = ["bn256-table"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
zkpf-common = { path = "../zkpf-common" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
halo2_proofs_axiom = { version = "0.5.1", package = "halo2-axiom", default-features = false, features = ["multicore"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
halo2_proofs_axiom = { version = "0.5.1", package = "halo2-axiom", default-features = false }