[package]
name = "zkpf-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
zkpf-circuit = { path = "../zkpf-circuit" }
halo2curves-axiom = { version = "0.7", package = "halo2curves-axiom", default-features = false, features = ["bn256-table"] }
rand = "0.8"
zkpf-common = { path = "../zkpf-common" }

# Binary-only dependencies (CLI prover tool)
clap = { version = "4", features = ["derive"], optional = true }
anyhow = { version = "1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[[bin]]
name = "zkpf-prover"
required-features = ["cli"]

[features]
default = []
cli = ["dep:clap", "dep:anyhow", "dep:serde", "dep:serde_json"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
halo2_proofs_axiom = { version = "0.5.1", package = "halo2-axiom", default-features = false, features = ["multicore", "circuit-params"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
halo2_proofs_axiom = { version = "0.5.1", package = "halo2-axiom", default-features = false, features = ["circuit-params"] }