[package]
name = "zkpf-rails-axelar"
version = "0.1.0"
edition = "2021"
description = "Axelar GMP rail service for zkpf interchain proof-of-funds"
license = "MIT"

[dependencies]
zkpf-common = { path = "../zkpf-common" }
zkpf-axelar-gmp = { path = "../zkpf-axelar-gmp" }

axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
hex = "0.4"

# Optional: ethers for EVM interaction
ethers = { version = "2.0", optional = true }

[features]
default = []
evm = ["ethers", "zkpf-axelar-gmp/ethers"]

[dev-dependencies]
axum-test = "14"
tokio = { version = "1", features = ["test-util"] }

