[package]
name = "zkpf-rails-mina"
version = "0.1.0"
edition = "2021"
description = "HTTP API service for Mina recursive proof hub rail"

[[bin]]
name = "zkpf-rails-mina"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
# Core zkpf crates
zkpf-common = { path = "../zkpf-common" }
zkpf-mina = { path = "../zkpf-mina" }

# Web framework
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
axum-test = "14.0"

