[package]
name = "zkpf-rails-omni"
version = "0.1.0"
edition = "2021"
description = "HTTP API service for Omni Bridge cross-chain operations"
license = "MIT"

[dependencies]
zkpf-common = { path = "../zkpf-common" }
zkpf-omni-bridge = { path = "../zkpf-omni-bridge" }

axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
hex = "0.4"

[dev-dependencies]
axum-test = "14"
tokio = { version = "1", features = ["test-util"] }

