[package]
name = "zkpf-rails-starknet"
version = "0.1.0"
edition = "2021"
description = "HTTP service for the Starknet L2 rail"

[[bin]]
name = "zkpf-rails-starknet"
path = "src/main.rs"

[dependencies]
# Core zkpf crates
zkpf-common = { path = "../zkpf-common" }
zkpf-starknet-l2 = { path = "../zkpf-starknet-l2", features = ["starknet-rpc"] }

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros", "signal"] }

# HTTP server
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
once_cell = "1.19"

[dev-dependencies]
axum-test = "14"

