[package]
name = "zkpf-starknet-l2"
version = "0.1.0"
edition = "2021"
description = "Starknet L2 rail for zkpf: zk proof-of-funds over Starknet accounts and DeFi positions"

[dependencies]
# Core zkpf crates
zkpf-common = { path = "../zkpf-common" }
zkpf-circuit = { path = "../zkpf-circuit" }

# Halo2 proving system (bn256 compatible) - matches workspace versions
halo2_proofs_axiom = { version = "0.5.1", package = "halo2-axiom", default-features = false }
halo2curves_axiom = { version = "0.7", package = "halo2curves-axiom", features = ["bn256-table"] }
halo2-base = { path = "../vendor/halo2-base" }

# Starknet integration (all optional - only needed with starknet-rpc feature)
# Note: starknet-crypto 0.7.x has dependency issues with lambdaworks-math on newer Rust.
starknet = { version = "0.12", optional = true, default-features = false }
starknet-core = { version = "0.12", optional = true, default-features = false }
starknet-providers = { version = "0.12", optional = true, default-features = false }
starknet-signers = { version = "0.10", optional = true, default-features = false }
starknet-accounts = { version = "0.11", optional = true, default-features = false }
# starknet-crypto is only needed for RPC feature
starknet-crypto = { version = "0.6", optional = true, default-features = false }

# Cryptography
blake3 = "1.5"
poseidon-primitives = "0.2"

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
once_cell = "1.19"
rand = "0.8"

[features]
default = []
# Enable full Starknet RPC client
starknet-rpc = ["starknet", "starknet-core", "starknet-providers", "starknet-signers", "starknet-accounts", "starknet-crypto", "tokio"]
# Enable WASM target support
wasm = []

[dev-dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }

