[package]
name = "zkpf-starknet-l2"
version = "0.1.0"
edition = "2021"
description = "Starknet L2 rail for zkpf: zk proof-of-funds over Starknet accounts and DeFi positions"

[dependencies]
# Core zkpf crates
zkpf-common = { path = "../zkpf-common" }
zkpf-circuit = { path = "../zkpf-circuit" }

# Halo2 proving system (bn256 compatible) - matches workspace versions
halo2_proofs_axiom = { version = "0.5.1", package = "halo2-axiom", default-features = false }
halo2curves_axiom = { version = "0.7", package = "halo2curves-axiom", features = ["bn256-table"] }
halo2-base = { path = "../vendor/halo2-base" }

# Starknet integration (all optional - only needed with starknet-rpc feature)
# Note: starknet 0.10 series uses lambdaworks-math 0.7.x that is compatible with current Rust stable.
# Newer versions (0.11+) pull in lambdaworks-math 0.13+ which uses unstable Rust features.
starknet = { version = "0.10", optional = true, default-features = false }
starknet-core = { version = "0.10", optional = true, default-features = false }
starknet-providers = { version = "0.10", optional = true, default-features = false }
starknet-signers = { version = "0.8", optional = true, default-features = false }
starknet-accounts = { version = "0.9", optional = true, default-features = false }
# starknet-crypto for signature verification (always included)
starknet-crypto = { version = "0.6", default-features = false }

# Cryptography
blake3 = "1.5"
poseidon-primitives = "0.2"

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"], optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
once_cell = "1.19"
rand = "0.8"
url = { version = "2.5", optional = true }
tracing = "0.1"
lazy_static = { version = "1.4", optional = true }

[features]
default = []
# Enable full Starknet RPC client with DeFi, attestation, and event support
starknet-rpc = ["starknet", "starknet-core", "starknet-providers", "starknet-signers", "starknet-accounts", "tokio", "url", "lazy_static"]
# Enable WASM target support
wasm = []

[dev-dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }

