[package]
name = "zkpf-test-fixtures"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
halo2curves-axiom = { version = "0.7", package = "halo2curves-axiom", features = ["bn256-table"] }
k256 = { version = "0.12", features = ["ecdsa", "sha256"] }
once_cell = "1"
poseidon-primitives = "0.2"
rand = { version = "0.8", features = ["std"] }
rand_chacha = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
zkpf-circuit = { path = "../zkpf-circuit" }
zkpf-common = { path = "../zkpf-common" }
zkpf-prover = { path = "../zkpf-prover" }
zkpf-verifier = { path = "../zkpf-verifier" }

[dev-dependencies]
base64 = "0.21"
