[package]
name = "zkpf-uri-payment"
version = "0.1.0"
edition = "2021"
description = "URI-Encapsulated Payments for Zcash - ZIP 324 implementation"
license = "MIT OR Apache-2.0"

[dependencies]
# Zcash protocol
zcash_primitives = "0.20"
zcash_keys = "0.5"
zcash_protocol = "0.4"
zcash_client_backend = "0.16"
orchard = "0.10"
sapling = { package = "sapling-crypto", version = "0.4" }
zip32 = "0.1"

# Cryptographic primitives
blake2b_simd = "1.0"
bech32 = "0.11"
rand = "0.8"
rand_core = "0.6"
subtle = "2.5"
ff = "0.13"
group = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
thiserror = "1.0"
percent-encoding = "2.3"
url = "2.5"

[dev-dependencies]
proptest = "1.4"
hex = "0.4"

[features]
default = []
testnet = []

