[package]
name = "zkpf-wallet-state"
version = "0.1.0"
edition = "2021"
description = "Wallet state machine with ZK proofs for state transitions"

[dependencies]
# Halo2 circuit framework
halo2_proofs_axiom = { version = "0.5.1", package = "halo2-axiom", default-features = false, features = ["circuit-params"] }
halo2-base = { version = "0.5.1", default-features = false, features = ["halo2-axiom"] }
halo2curves-axiom = { version = "0.7", package = "halo2curves-axiom", default-features = false, features = ["bn256-table"] }

# Workspace dependencies
zkpf-circuit = { path = "../zkpf-circuit" }
zkpf-common = { path = "../zkpf-common" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Hashing
blake3 = "1.5"
poseidon-primitives = "0.2"

# Error handling
thiserror = "1"
anyhow = "1"

# Utilities
once_cell = "1"

[dev-dependencies]
hex = "0.4"

