[package]
name = "zkpf-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
# Ensure multicore is disabled for WASM builds, but enable circuit-params for proper key deserialization
halo2_proofs_axiom = { version = "0.5.1", package = "halo2-axiom", default-features = false, features = ["circuit-params"] }
halo2curves-axiom = { version = "0.7", package = "halo2curves-axiom", default-features = false, features = ["bn256-table"] }
zkpf-circuit = { path = "../zkpf-circuit" }
zkpf-prover = { path = "../zkpf-prover" }
zkpf-verifier = { path = "../zkpf-verifier" }
zkpf-common = { path = "../zkpf-common" }
poseidon-primitives = "0.2"
getrandom = { version = "0.2", features = ["js"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"
zkpf-test-fixtures = { path = "../zkpf-test-fixtures" }

[features]
default = []