[package]
name = "zkpf-zcash-orchard-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
once_cell = "1.19"
orchard = { version = "0.11", default-features = false, features = ["circuit", "std"] }
zkpf-orchard-pof-circuit = { path = "../zkpf-orchard-pof-circuit" }
blake3 = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
orchard = { version = "0.11", default-features = false, features = ["circuit", "multicore", "std"] }


