[package]
name = "zkpf-zcash-orchard-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
once_cell = "1.19"
orchard = { version = "0.11", default-features = false, features = ["circuit", "std"] }
zkpf-orchard-pof-circuit = { path = "../zkpf-orchard-pof-circuit" }
blake3 = "1"
tokio = { version = "1.35", features = ["rt-multi-thread", "sync", "macros"], optional = true }
tonic = { version = "0.11", optional = true }
prost = { version = "0.12", optional = true }
rusqlite = { version = "0.31", features = ["bundled"], optional = true }
incrementalmerkletree = { version = "0.7", optional = true }
shardtree = { version = "0.5", optional = true }
hex = "0.4"
tracing = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
orchard = { version = "0.11", default-features = false, features = ["circuit", "multicore", "std"] }

[features]
default = []
lightwalletd = ["tokio", "tonic", "prost", "rusqlite", "incrementalmerkletree", "shardtree"]

[build-dependencies]
tonic-build = { version = "0.11", optional = true }


